fix: cards section text and icons with text-align center

--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,11 @@ img {
     justify-content: left;
   }
 
-  #card-section h3 {
+  #card-section .demo-application h3 {
+    text-align: left;
+  }
+
+  #card-section .col .demo-application p {
     text-align: left;
   }
 
@@ -217,6 +221,10 @@ img {
     width: 50%;
   }
 
+  #card-section .col p {
+    text-align: center;
+  }
+
 }
 
 @media screen and (min-width: 992px) {
@@ -226,10 +234,8 @@ img {
 
   #card-section img {
     width: 100%;
-  }
-}
-
-@media screen and (min-width: 992px) {
+  } 
+  
   #card-section .col:nth-child(1) {
     display: flex;
   }
@@ -238,10 +244,9 @@ img {
     display: flex;
     align-items: end;
   }
-  /* #card-section img {
-    transform: translateY(56%);
-  } */
+
 }
+
 /* /media quert 5 cards section */
 
 /* /5 card section */
